# hr-automation

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: server.py
data/: candidates.json  jobs.json  tasks.json
env/: environment.py  graders.py  models.py  reward.py  tasks.py
server/: __init__.py  app.py
